* Visible audio play feedback. Fixes #37

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -958,8 +958,8 @@ body.lang-t .ui-tooltip .example {
 .playAudio {
     margin-left: 5px;
     color: $primary-color;
-    font-size: 75%;
-    padding: 10px;
+    font-size: 70%;
+    padding: 8px;
     cursor: pointer;
     line-height: 100%;
 }
